--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -58,7 +58,13 @@
                                         </nav>
                                     </div>
                                     <div class="header-right-btn f-right d-none d-lg-block ml-15">
-                                        <a href="{{ path('app_login')}}" class="btn header-btn">Inscrivez vous & essayez !</a>
+                                        <a href="{{ path('app_login')}}" class="btn header-btn">
+                                            {% if not app.user %}
+                                            S'inscrire / Se connecter
+                                            {% else %}
+                                            Se déconnecter
+                                            {% endif %}
+                                        </a>
                                     </div>
                                 </div>
                             </div>   
