--- a/templates/services/index.html.twig
+++ b/templates/services/index.html.twig
@@ -12,179 +12,179 @@
                     <div class="row align-items-center">
                         <div class="col-xl-7 col-lg-8 col-md-10 ">
                             <div class="hero-wrapper">
-                            <div class="hero__caption">
-                                <h1 data-animation="fadeInUp" data-delay=".3s">Services proposés</h1>
-                                <p data-animation="fadeInUp" data-delay=".6s">Profitez de la musicothérapie en rendez-vous individuel personnalisé ou consultez nos ateliers pour donner un coup de pouce à votre dynamique de groupe !</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>    
-    </div>
-</div>
-<!-- Slider Area End -->
-<section class="wantToWork-area">
-    <div class="container">
-        <div class="wants-wrapper w-padding2">
-            <div class="row align-items-center justify-content-between">
-                <div class="col-xl-7 col-lg-9 col-md-8">
-                    <div class="wantToWork-caption wantToWork-caption2">
-                        <h2>Nos 2 services principaux</h2>
-                        <p>Initiez vous à la musicothérapie d'une manière adaptée à vos besoins !</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!--? Services Area Start -->
-<div class="service-area">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-6">
-                <div class="single-cat text-center mb-50">
-                    <div class="cat-icon">
-                        <img src="{{ asset('img/icon/inspiration.svg') }}" alt="">
-                    </div>
-                    <div class="cat-cap">
-                        <h5><a href="#personal-appointments">Rendez-vous individuel</a></h5>
-                        <p>Profitez d'une séance de musicothérapie personnalisée et voyez comment la musique peut vous aider à être en meilleure santé</p>
-                        <a href="#personal-appointments" class="plus-btn"><i class="ti-plus"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-6">
-                <div class="single-cat text-center mb-50">
-                    <div class="cat-icon">
-                        <img src="{{ asset('img/icon/add-group.svg') }}" alt="">
-                    </div>
-                    <div class="cat-cap">
-                        <h5><a href="#group-sessions">Ateliers groupés</a></h5>
-                        <p>Redynamisez votre groupe avec des ateliers interactifs avec notamment des instruments de musique</p>
-                        <a href="#group-sessions" class="plus-btn"><i class="ti-plus"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="section-top-border" id="personal-appointments">
-            <h3 class="mb-30">RDV individuels : horaires disponibles</h3>
-            <div class="progress-table-wrap">
-                <div class="progress-table">
-                    <div class="table-head">
-                        <div class="date">Date</div>
-                        <div class="hour">Heure</div>
-                        <div class="select"></div>
-                    </div>
-                    <div class="table-row">
-                        <div class="date">26 mai 2021</div>
-                        <div class="hour">18:00</div>
-                        <div class="select"><a href="#" class="genric-btn primary">Sélectionner</a></div>
-                    </div>
-                    <div class="table-row">
-                        <div class="date">31 mai 2021</div>
-                        <div class="hour">11:30</div>
-                        <div class="select"><a href="#" class="genric-btn primary">Sélectionner</a></div>
-                    </div>
-                    <div class="table-row">
-                        <div class="date">05 juin 2021</div>
-                        <div class="hour">15:00</div>
-                        <div class="select"><a href="#" class="genric-btn primary">Sélectionner</a></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="section-top-border" id="group-sessions" >
-            <h3 class="mb-30">Ateliers groupés : horaires disponibles</h3>
-            <div class="progress-table-wrap">
-                <div class="progress-table">
-                    <div class="table-head">
-                        <div class="date">Date</div>
-                        <div class="hour">Heure</div>
-                        <div class="select"></div>
-                    </div>
-                    <div class="table-row">
-                        <div class="date">26 mai 2021</div>
-                        <div class="hour">18:00</div>
-                        <div class="select"><a href="#" class="genric-btn primary">Sélectionner</a></div>
-                    </div>
-                    <div class="table-row">
-                        <div class="date">31 mai 2021</div>
-                        <div class="hour">11:30</div>
-                        <div class="select"><a href="#" class="genric-btn primary">Sélectionner</a></div>
-                    </div>
-                    <div class="table-row">
-                        <div class="date">05 juin 2021</div>
-                        <div class="hour">15:00</div>
-                        <div class="select"><a href="#" class="genric-btn primary">Sélectionner</a></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Services Area End -->
-<!--? video_start -->
-<div class="container pt-40">
-    <div class="video-area section-bg2 d-flex align-items-center"  data-background="{{ asset('img/gallery/video-bg.png') }}">
-        <div class="video-wrap position-relative">
-            <div class="video-icon" >
-                <a class="popup-video btn-icon" href="https://www.youtube.com/watch?v=up68UAfH0d0"><i class="fas fa-play"></i></a>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- video_end -->      
-<!--? Testimonial Area Start -->
-<section class="testimonial-area testimonial-padding fix pb-bottom">
-    <div class="container">
-        <div class="row align-items-center justify-content-center">
-            <div class=" col-lg-9">
-                <div class="about-caption">
-                    <!-- Testimonial Start -->
-                    <div class="h1-testimonial-active dot-style">
-                        <!-- Single Testimonial -->
-                        <div class="single-testimonial position-relative">
-                            <div class="testimonial-caption">
-                                <img src="{{ asset('img/icon/quotes-sign.png') }}" alt="" class="quotes-sign">
-                                <p>"The automated process starts as soon as your clothe go into the machine. This site outcome is gleaming clothe. Placeholder text commonly used. In publishing and graphic.</p>
-                            </div>
-                            <!-- founder -->
-                            <div class="testimonial-founder d-flex align-items-center">
-                                <div class="founder-img">
-                                    <img src="{{ asset('img/icon/testimonial.png') }}" alt="">
-                                </div>
-                                <div class="founder-text">
-                                    <span>Robart Brown</span>
-                                    <p>Creative designer at Colorlib</p>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Single Testimonial -->
-                        <div class="single-testimonial position-relative">
-                            <div class="testimonial-caption">
-                                <img src="{{ asset('img/icon/quotes-sign.png') }}" alt="" class="quotes-sign">
-                                <p>"The automated process starts as soon as your clothe go into the machine. This site outcome is gleaming clothe. Placeholder text commonly used. In publishing and graphic.</p>
-                            </div>
-                            <!-- founder -->
-                            <div class="testimonial-founder d-flex align-items-center">
-                                <div class="founder-img">
-                                    <img src="{{ asset('img/icon/testimonial.png') }}" alt="">
-                                </div>
-                                <div class="founder-text">
-                                    <span>Robart Brown</span>
-                                    <p>Creative designer at Colorlib</p>
+                                <div class="hero__caption">
+                                    <h1 data-animation="fadeInUp" data-delay=".3s">Services proposés</h1>
+                                    <p data-animation="fadeInUp" data-delay=".6s">Profitez de la musicothérapie en rendez-vous individuel personnalisé ou consultez nos ateliers pour donner un coup de pouce à votre dynamique de groupe !</p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!-- Testimonial End -->
+                </div>
+            </div>    
+        </div>
+    </div>
+    <!-- Slider Area End -->
+    <section class="wantToWork-area">
+        <div class="container">
+            <div class="wants-wrapper w-padding2">
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-xl-7 col-lg-9 col-md-8">
+                        <div class="wantToWork-caption wantToWork-caption2">
+                            <h2>Nos 2 services principaux</h2>
+                            <p>Initiez vous à la musicothérapie d'une manière adaptée à vos besoins !</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--? Services Area Start -->
+    <div class="service-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="single-cat text-center mb-50">
+                        <div class="cat-icon">
+                            <img src="{{ asset('img/icon/inspiration.svg') }}" alt="">
+                        </div>
+                        <div class="cat-cap">
+                            <h5><a href="#personal-appointments">Rendez-vous individuel</a></h5>
+                            <p>Profitez d'une séance de musicothérapie personnalisée et voyez comment la musique peut vous aider à être en meilleure santé</p>
+                            <a href="#personal-appointments" class="plus-btn"><i class="ti-plus"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="single-cat text-center mb-50">
+                        <div class="cat-icon">
+                            <img src="{{ asset('img/icon/add-group.svg') }}" alt="">
+                        </div>
+                        <div class="cat-cap">
+                            <h5><a href="#group-sessions">Ateliers groupés</a></h5>
+                            <p>Redynamisez votre groupe avec des ateliers interactifs avec notamment des instruments de musique</p>
+                            <a href="#group-sessions" class="plus-btn"><i class="ti-plus"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="section-top-border" id="personal-appointments">
+                <h3 class="mb-30">RDV individuels : horaires disponibles</h3>
+                <div class="progress-table-wrap">
+                    <div class="progress-table">
+                        <div class="table-head">
+                            <div class="date">Date</div>
+                            <div class="hour">Heure</div>
+                            <div class="select"></div>
+                        </div>
+                        <div class="table-row">
+                            <div class="date">26 mai 2021</div>
+                            <div class="hour">18:00</div>
+                            <div class="select"><a href="{{ path('confirmBooking') }}" class="genric-btn primary">Sélectionner</a></div>
+                        </div>
+                        <div class="table-row">
+                            <div class="date">31 mai 2021</div>
+                            <div class="hour">11:30</div>
+                            <div class="select"><a href="{{ path('confirmBooking') }}" class="genric-btn primary">Sélectionner</a></div>
+                        </div>
+                        <div class="table-row">
+                            <div class="date">05 juin 2021</div>
+                            <div class="hour">15:00</div>
+                            <div class="select"><a href="{{ path('confirmBooking') }}" class="genric-btn primary">Sélectionner</a></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="section-top-border" id="group-sessions" >
+                <h3 class="mb-30">Ateliers groupés : horaires disponibles</h3>
+                <div class="progress-table-wrap">
+                    <div class="progress-table">
+                        <div class="table-head">
+                            <div class="date">Date</div>
+                            <div class="hour">Heure</div>
+                            <div class="select"></div>
+                        </div>
+                        <div class="table-row">
+                            <div class="date">26 mai 2021</div>
+                            <div class="hour">18:00</div>
+                            <div class="select"><a href="{{ path('confirmBooking') }}" class="genric-btn primary">Sélectionner</a></div>
+                        </div>
+                        <div class="table-row">
+                            <div class="date">31 mai 2021</div>
+                            <div class="hour">11:30</div>
+                            <div class="select"><a href="{{ path('confirmBooking') }}" class="genric-btn primary">Sélectionner</a></div>
+                        </div>
+                        <div class="table-row">
+                            <div class="date">05 juin 2021</div>
+                            <div class="hour">15:00</div>
+                            <div class="select"><a href="{{ path('confirmBooking') }}" class="genric-btn primary">Sélectionner</a></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</section>
-<!--? Testimonial Area End -->
+    <!-- Services Area End -->
+    <!--? video_start -->
+    <div class="container pt-40">
+        <div class="video-area section-bg2 d-flex align-items-center"  data-background="{{ asset('img/gallery/video-bg.png') }}">
+            <div class="video-wrap position-relative">
+                <div class="video-icon" >
+                    <a class="popup-video btn-icon" href="https://www.youtube.com/watch?v=up68UAfH0d0"><i class="fas fa-play"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- video_end -->      
+    <!--? Testimonial Area Start -->
+    <section class="testimonial-area testimonial-padding fix pb-bottom">
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class=" col-lg-9">
+                    <div class="about-caption">
+                        <!-- Testimonial Start -->
+                        <div class="h1-testimonial-active dot-style">
+                            <!-- Single Testimonial -->
+                            <div class="single-testimonial position-relative">
+                                <div class="testimonial-caption">
+                                    <img src="{{ asset('img/icon/quotes-sign.png') }}" alt="" class="quotes-sign">
+                                    <p>"The automated process starts as soon as your clothe go into the machine. This site outcome is gleaming clothe. Placeholder text commonly used. In publishing and graphic.</p>
+                                </div>
+                                <!-- founder -->
+                                <div class="testimonial-founder d-flex align-items-center">
+                                    <div class="founder-img">
+                                        <img src="{{ asset('img/icon/testimonial.png') }}" alt="">
+                                    </div>
+                                    <div class="founder-text">
+                                        <span>Robart Brown</span>
+                                        <p>Creative designer at Colorlib</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Single Testimonial -->
+                            <div class="single-testimonial position-relative">
+                                <div class="testimonial-caption">
+                                    <img src="{{ asset('img/icon/quotes-sign.png') }}" alt="" class="quotes-sign">
+                                    <p>"The automated process starts as soon as your clothe go into the machine. This site outcome is gleaming clothe. Placeholder text commonly used. In publishing and graphic.</p>
+                                </div>
+                                <!-- founder -->
+                                <div class="testimonial-founder d-flex align-items-center">
+                                    <div class="founder-img">
+                                        <img src="{{ asset('img/icon/testimonial.png') }}" alt="">
+                                    </div>
+                                    <div class="founder-text">
+                                        <span>Robart Brown</span>
+                                        <p>Creative designer at Colorlib</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Testimonial End -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--? Testimonial Area End -->
 </main>
 
 {% endblock %}
